--- a/src/components/layout.jsx/Layout.css
+++ b/src/components/layout.jsx/Layout.css
@@ -150,7 +150,7 @@ body {
 }
 
 .nav__items .nav__link:hover {
-	color: var(--secondary);
+	/* color: var(--secondary); */
 }
 
 .nav__item:nth-child(1) .nav__link::before {
@@ -247,7 +247,7 @@ body {
 	}
 
 	.nav .nav__items .nav__item .nav__link:hover {
-		color: var(--secondary);
+		color: #FFC85B;
 	}
 
 	.nav__open {
@@ -266,7 +266,7 @@ body {
 		display: block;
 		width: 20px;
 		height: 2px;
-		background-color: var(--secondary);
+		background-color: var(--shades);
 		border-radius: 2px;
 		margin-left: 14px;
 	}
